[project]
name = "afd_dbserver"
version = "1.0.0"
authors = [
    { name="Phil Boltt", email="phil.boltt@animatrik.com"},
    { name="Shawn Ramcharan", email="shawn.ramcharan@animatrik.com" },
    { name="Petar Milacic", email="petar.milacic@animatrik.com" },
]
description="Animatrik Film Design Database API."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "sqlmodel",
  "fastapi",
  "jinja2",
  "afd_timecode>=0.4.1",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]

server = [
  "gunicorn",
  "uvicorn",
] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points]
paste.app_factory = "app:app"

[project.urls]
Homepage = "https://github.com/animatrik/afd_dbserver"
Issues = "https://github.com/animatrik/afd_dbserver"
